重写 文章分类管理页面, 采用树结构拖拽. 拖拽排序还未实现。明日实现。

--- a/code/JIF.CMS/JIF.CMS.Management/Views/Article/Categories.cshtml
+++ b/code/JIF.CMS/JIF.CMS.Management/Views/Article/Categories.cshtml
@@ -1,94 +1,51 @@
-﻿@model List<JIF.CMS.Core.Domain.Articles.ArticleCategory>
-@{
+﻿@{
     ViewBag.Title = "分类管理";
 }
 
 <div class="row">
-    <div class="col-md-4">
-
+    <div class="col-md-5">
         <div class="box box-primary">
+            <div class="box-header with-border">
+                <h3 class="box-title">所有分类</h3>
+            </div>
             <div class="box-body">
-                <ul>
-                    @foreach (var cate in Model)
-                    {
-                        <li>
-                            <a href="javascript:;">@cate.Name</a>
-                            @if (!cate.Childs.IsNullOrEmpty())
-                            {
-                                <ul>
-                                    @foreach (var item in cate.Childs)
-                                    {
-                                        <li><a href="javascript:;">@(((JIF.CMS.Core.Domain.Articles.ArticleCategory)item).Name)</a></li>
-                                    }
-                                </ul>
-                            }
-                        </li>
-                    }
-                </ul>
+                <div class="dd" id="category-list">
+                    @Html.Action("_Categories")
+                </div>
+            </div>
+
+            <div class="box-footer">
+                <button type="button" class="btn btn-default">保存排序</button>
             </div>
         </div>
     </div>
-    <div class="col-md-8">
-        <div class="box box-primary">
-            <div class="box-body">
-                <h1>Option</h1>
+
+    <div class="col-md-7">
+        <div class="box box-primary" id="category-info">
+            <div class="box-header with-border">
+                <h3 class="box-title">分类详情</h3>
+                <div class="box-tools pull-left">
+                    <button type="button" id="category-add" class="btn btn-info btn-sm">新增</button>
+                </div>
             </div>
-        </div>
-    </div>
-</div>
-
-<div class="row">
-    <div class="col-md-12">
-
-        <div class="box box-primary">
-            <div class="box-body">
-
-                <table class="table table-bordered table-hover table-condensed">
-                    <thead>
-                        <tr>
-                            <th style="width: 10px"><input class="form-control input-sm minimal" type="checkbox"></th>
-                            @*<th style="width: 200px">排序</th>*@
-                            <th>分类名称</th>
-                            <th style="width:104px;">操作</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        @foreach (var node in Model)
-                        {
-                            <tr class="no-padding" data-has-child="@(node.Childs.IsNullOrEmpty() ? "1":"0")" data-cate-id="@node.Id">
-                                <td>
-                                    <input class="form-control input-sm minimal" type="checkbox">
-                                </td>
-                                @*<td>
-                                        <input class="form-control input-sm" type="number" value="@node.Current.OrderIndex" />
-                                    </td>*@
-                                <td>
-                                    <input class="form-control input-sm" type="text" value="@node.Name" />
-                                </td>
-                                <td class="op-td" data-cate-id="@node.Id" data-cate-name="@node.Name">
-                                    <a href="javascript:;" class="btn btn-xs btn-default no-margin" data-toggle="tooltip" data-original-title="上移"><i class="fa fa-caret-up"></i></a>
-                                    <a href="javascript:;" class="btn btn-xs btn-default no-margin" data-toggle="tooltip" data-original-title="下移"><i class="fa fa-caret-down"></i></a>
-                                    <a href="javascript:;" class="btn btn-xs btn-default no-margin" data-toggle="tooltip" data-original-title="管理"><i class="fa fa-cog"></i></a>
-                                    <a href="javascript:;" class="btn btn-xs bg-red no-margin" data-toggle="tooltip" data-original-title="删除"><i class="fa fa-trash"></i></a>
-                                </td>
-                            </tr>
-
-                            if (!node.Childs.IsNullOrEmpty())
-                            {
-                                Html.RenderPartial("_CategoriesItem", node.Childs.Select(d => (JIF.CMS.Core.Domain.Articles.ArticleCategory)d));
-                            }
-                        }
-
-                    </tbody>
-                </table>
-            </div>
+            @Html.Action("CategoryInfo", new { id = -1 })
         </div>
     </div>
 </div>
 
 @section Scripts{
-    <script src="~/Content/ztreeV3/js/jquery.ztree.core.js"></script>
+    <script src="~/Content/Nestable/jquery.nestable.js"></script>
     @Scripts.Render("~/scripts/web-uploader", "~/scripts/page/article-categories")
+
+    <script type="text/javascript">
+        $(function () {
+            $('#category-list').nestable({
+                collapseBtnHTML: '',
+                maxDepth: 10,
+            });
+        });
+
+    </script>
 }
 
 
@@ -101,14 +58,299 @@
         }
 
         li {
-            list-style:none;
+            list-style: none;
         }
         /*.mailbox-attachment-icon {
                     padding: 0 0;
                 }*/
 
-        /*.category-cover-img {
-                    max-height: 200px;
-                }*/
+        #category-cover-img {
+            max-height: 200px;
+        }
+
+
+        .dd3-content .pull-right {
+            /*display: none;*/
+        }
+
+        .dd3-content:hover .pull-right {
+            display: inline-block;
+        }
+    </style>
+
+    <style type="text/css">
+        /**
+         * Nestable
+         */
+
+        .dd {
+            position: relative;
+            display: block;
+            margin: 0;
+            padding: 0;
+            /*max-width: 600px;*/
+            list-style: none;
+            font-size: 13px;
+            line-height: 20px;
+        }
+
+        .dd-list {
+            display: block;
+            position: relative;
+            margin: 0;
+            padding: 0;
+            list-style: none;
+        }
+
+            .dd-list .dd-list {
+                padding-left: 30px;
+            }
+
+        .dd-collapsed .dd-list {
+            display: none;
+        }
+
+        .dd-item,
+        .dd-empty,
+        .dd-placeholder {
+            display: block;
+            position: relative;
+            margin: 0;
+            padding: 0;
+            min-height: 20px;
+            font-size: 13px;
+            line-height: 20px;
+        }
+
+        .dd-handle {
+            display: block;
+            height: 30px;
+            margin: 5px 0;
+            padding: 5px 10px;
+            color: #333;
+            text-decoration: none;
+            font-weight: bold;
+            border: 1px solid #ccc;
+            background: #fafafa;
+            background: -webkit-linear-gradient(top, #fafafa 0%, #eee 100%);
+            background: -moz-linear-gradient(top, #fafafa 0%, #eee 100%);
+            background: linear-gradient(top, #fafafa 0%, #eee 100%);
+            -webkit-border-radius: 3px;
+            border-radius: 3px;
+            box-sizing: border-box;
+            -moz-box-sizing: border-box;
+        }
+
+            .dd-handle:hover {
+                color: #2ea8e5;
+                background: #fff;
+            }
+
+        .dd-item > button {
+            display: block;
+            position: relative;
+            cursor: pointer;
+            float: left;
+            width: 25px;
+            height: 20px;
+            margin: 5px 0;
+            padding: 0;
+            text-indent: 100%;
+            white-space: nowrap;
+            overflow: hidden;
+            border: 0;
+            background: transparent;
+            font-size: 12px;
+            line-height: 1;
+            text-align: center;
+            font-weight: bold;
+        }
+
+            .dd-item > button:before {
+                content: '+';
+                display: block;
+                position: absolute;
+                width: 100%;
+                text-align: center;
+                text-indent: 0;
+            }
+
+            .dd-item > button[data-action="collapse"]:before {
+                content: '-';
+            }
+
+        .dd-placeholder,
+        .dd-empty {
+            margin: 5px 0;
+            padding: 0;
+            min-height: 30px;
+            background: #f2fbff;
+            border: 1px dashed #b6bcbf;
+            box-sizing: border-box;
+            -moz-box-sizing: border-box;
+        }
+
+        .dd-empty {
+            border: 1px dashed #bbb;
+            min-height: 100px;
+            background-color: #e5e5e5;
+            background-image: -webkit-linear-gradient(45deg, #fff 25%, transparent 25%, transparent 75%, #fff 75%, #fff), -webkit-linear-gradient(45deg, #fff 25%, transparent 25%, transparent 75%, #fff 75%, #fff);
+            background-image: -moz-linear-gradient(45deg, #fff 25%, transparent 25%, transparent 75%, #fff 75%, #fff), -moz-linear-gradient(45deg, #fff 25%, transparent 25%, transparent 75%, #fff 75%, #fff);
+            background-image: linear-gradient(45deg, #fff 25%, transparent 25%, transparent 75%, #fff 75%, #fff), linear-gradient(45deg, #fff 25%, transparent 25%, transparent 75%, #fff 75%, #fff);
+            background-size: 60px 60px;
+            background-position: 0 0, 30px 30px;
+        }
+
+        .dd-dragel {
+            position: absolute;
+            pointer-events: none;
+            z-index: 9999;
+        }
+
+            .dd-dragel > .dd-item .dd-handle {
+                margin-top: 0;
+            }
+
+            .dd-dragel .dd-handle {
+                -webkit-box-shadow: 2px 4px 6px 0 rgba(0,0,0,.1);
+                box-shadow: 2px 4px 6px 0 rgba(0,0,0,.1);
+            }
+
+        /**
+        * Nestable Extras
+        */
+
+        .nestable-lists {
+            display: block;
+            clear: both;
+            padding: 30px 0;
+            width: 100%;
+            border: 0;
+            border-top: 2px solid #ddd;
+            border-bottom: 2px solid #ddd;
+        }
+
+        #nestable-menu {
+            padding: 0;
+            margin: 20px 0;
+        }
+
+        #nestable-output,
+        #nestable2-output {
+            width: 100%;
+            height: 7em;
+            font-size: 0.75em;
+            line-height: 1.333333em;
+            font-family: Consolas, monospace;
+            padding: 5px;
+            box-sizing: border-box;
+            -moz-box-sizing: border-box;
+        }
+
+        #nestable2 .dd-handle {
+            color: #fff;
+            border: 1px solid #999;
+            background: #bbb;
+            background: -webkit-linear-gradient(top, #bbb 0%, #999 100%);
+            background: -moz-linear-gradient(top, #bbb 0%, #999 100%);
+            background: linear-gradient(top, #bbb 0%, #999 100%);
+        }
+
+            #nestable2 .dd-handle:hover {
+                background: #bbb;
+            }
+
+        #nestable2 .dd-item > button:before {
+            color: #fff;
+        }
+
+        @@media only screen and (min-width: 700px) {
+
+            .dd {
+                float: left;
+                width: 100%;
+            }
+
+                .dd + .dd {
+                    margin-left: 2%;
+                }
+        }
+
+        .dd-hover > .dd-handle {
+            background: #2ea8e5 !important;
+        }
+
+        /**
+        * Nestable Draggable Handles
+        */
+
+        .dd3-content {
+            display: block;
+            height: 30px;
+            margin: 5px 0;
+            padding: 5px 10px 5px 40px;
+            color: #333;
+            text-decoration: none;
+            font-weight: bold;
+            border: 1px solid #ccc;
+            background: #fafafa;
+            background: -webkit-linear-gradient(top, #fafafa 0%, #eee 100%);
+            background: -moz-linear-gradient(top, #fafafa 0%, #eee 100%);
+            background: linear-gradient(top, #fafafa 0%, #eee 100%);
+            -webkit-border-radius: 3px;
+            border-radius: 3px;
+            box-sizing: border-box;
+            -moz-box-sizing: border-box;
+        }
+
+            .dd3-content:hover {
+                color: #2ea8e5;
+                background: #fff;
+            }
+
+        .dd-dragel > .dd3-item > .dd3-content {
+            margin: 0;
+        }
+
+        .dd3-item > button {
+            margin-left: 30px;
+        }
+
+        .dd3-handle {
+            position: absolute;
+            margin: 0;
+            left: 0;
+            top: 0;
+            cursor: pointer;
+            width: 30px;
+            text-indent: 100%;
+            white-space: nowrap;
+            overflow: hidden;
+            border: 1px solid #aaa;
+            background: #ddd;
+            background: -webkit-linear-gradient(top, #ddd 0%, #bbb 100%);
+            background: -moz-linear-gradient(top, #ddd 0%, #bbb 100%);
+            background: linear-gradient(top, #ddd 0%, #bbb 100%);
+            border-top-right-radius: 0;
+            border-bottom-right-radius: 0;
+        }
+
+            .dd3-handle:before {
+                content: '≡';
+                display: block;
+                position: absolute;
+                left: 0;
+                top: 3px;
+                width: 100%;
+                text-align: center;
+                text-indent: 0;
+                color: #fff;
+                font-size: 20px;
+                font-weight: normal;
+            }
+
+            .dd3-handle:hover {
+                background: #ddd;
+            }
     </style>
 }
