--- a/code/JIF.CMS/JIF.CMS.Management/Views/SysManager/Index.cshtml
+++ b/code/JIF.CMS/JIF.CMS.Management/Views/SysManager/Index.cshtml
@@ -47,7 +47,7 @@
                                     <td>@manager.CellPhone</td>
                                     <td>@manager.CreateUserName</td>
                                     <td><span class="label @(manager.Enable ? "label-success" : "label-danger")">@(manager.Enable ? "启用" : "停用")</span></td>
-                                    <td>@manager.CreateTime.ToString(JIFConsts.DATETIME_DATE)</td>
+                                    <td>@manager.CreateTime.ToString(JIFConstants.DATETIME_DATE)</td>
                                     <td>
                                         <a href="/sysmanager/detail/@manager.Id" class="btn btn-xs btn-primary no-margin">详情</a>
                                     </td>
