--- a/code/JIF.CMS/JIF.CMS.Management/Views/Article/Detail.cshtml
+++ b/code/JIF.CMS/JIF.CMS.Management/Views/Article/Detail.cshtml
@@ -25,7 +25,7 @@
             <div class="box-body">
                 <div class="form-group">
                     <label for="inp-pub-date">发布日期</label>
-                    <input type="text" class="form-control datepicker" id="inp-pub-date" placeholder="发布日期" value="@article.PublishTime.ToString(JIFConsts.DATETIME_NORMAL)">
+                    <input type="text" class="form-control datepicker" id="inp-pub-date" placeholder="发布日期" value="@article.PublishTime.ToString(JIFConstants.DATETIME_NORMAL)">
                 </div>
                 <div class="form-group">
                     <label>所属分类</label>&nbsp;<i id="op-categories" class="fa fa-cog" style="cursor:pointer;" data-toggle="tooltip" data-original-title="管理分类"></i></small>
