--- a/code/JIF.CMS/JIF.CMS.Management/Views/Welcome/Index.cshtml
+++ b/code/JIF.CMS/JIF.CMS.Management/Views/Welcome/Index.cshtml
@@ -39,15 +39,29 @@
                 </div>
                 <div class="form-group has-feedback">
                     <input type="password" class="form-control" placeholder="密码" name="Password" required>
-                    <span class="glyphicon glyphicon-lock form-control-feedback"></span>
+                    <span class="fa fa-lock form-control-feedback"></span>
                 </div>
-                <div class="row">
-                    <!-- /.col -->
-                    <div class="col-xs-4">
-                        <button type="submit" class="btn btn-primary btn-block btn-flat">登 录</button>
+
+
+                <div class="form-group has-feedback">
+                    <div class="row">
+                        <div class="col-xs-8">
+                            <input type="text" class="form-control" placeholder="验证码" name="VerifyCode" required>
+                        </div>
+                        <div class="col-xs-4">
+                            <img style="width:86.7px; height:34px; border:1px #eee solid;" />
+                        </div>
                     </div>
-                    <!-- /.col -->
                 </div>
+
+                <div class="form-group has-feedback">
+                    <div class="row">
+                        <div class="col-xs-4">
+                            <button type="submit" class="btn btn-primary btn-block btn-flat">登 录</button>
+                        </div>
+                    </div>
+                </div>
+
                 @if (TempData["JIFExceptionMessage"] != null)
                 {
                     <div class="row">
@@ -55,17 +69,6 @@
                         <div class="col-md-12">
                             <div class="callout callout-danger">
                                 <p>@TempData["JIFExceptionMessage"]</p>
-                            </div>
-                        </div>
-                    </div>
-                }
-                @if (ViewBag.User != null)
-                {
-                    <div class="row">
-                        <br />
-                        <div class="col-md-12">
-                            <div class="callout callout-success">
-                                <p>Name: @ViewBag.User.Account</p>
                             </div>
                         </div>
                     </div>
