--- a/code/JIF.CMS/JIF.CMS.Management/Views/Welcome/Index.cshtml
+++ b/code/JIF.CMS/JIF.CMS.Management/Views/Welcome/Index.cshtml
@@ -62,6 +62,9 @@
                     </div>
                 </div>
 
+
+                <h1>@ViewBag.SessionID</h1>
+
                 @if (TempData["JIFExceptionMessage"] != null)
                 {
                     <div class="row">
