--- a/code/JIF.CMS/JIF.CMS.Management/Views/Welcome/Index.cshtml
+++ b/code/JIF.CMS/JIF.CMS.Management/Views/Welcome/Index.cshtml
@@ -49,7 +49,7 @@
                             <input type="text" class="form-control" placeholder="验证码" name="VerifyCode" required>
                         </div>
                         <div class="col-xs-4">
-                            <img style="width:86.7px; height:34px; border:1px #eee solid;" />
+                            <img id="img-verify-code" style="width:86.7px; height:34px; border:1px #eee solid; cursor:pointer;" />
                         </div>
                     </div>
                 </div>
@@ -61,9 +61,6 @@
                         </div>
                     </div>
                 </div>
-
-
-                <h1>@ViewBag.SessionID</h1>
 
                 @if (TempData["JIFExceptionMessage"] != null)
                 {
@@ -85,5 +82,19 @@
     <script src="~/Content/AdminLTE/plugins/jQuery/jquery-2.2.3.min.js"></script>
     <!-- Bootstrap 3.3.6 -->
     <script src="~/Content/AdminLTE/bootstrap/bootstrap.js"></script>
+
+    <script type="text/javascript">
+        $(function () {
+
+            refreshVerifyCode();
+
+            $('#img-verify-code').click(function () { refreshVerifyCode(); });
+        });
+
+        function refreshVerifyCode() {
+            var verifyCodeURL = '/welcome/getverifycode';
+            $('#img-verify-code').attr('src', verifyCodeURL + '?r=' + new Date().getTime() + Math.floor(Math.random() * (1000 + 1)));
+        }
+    </script>
 </body>
 </html>
