--- a/code/JIF.CMS/JIF.CMS.Management/Views/Welcome/Index.cshtml
+++ b/code/JIF.CMS/JIF.CMS.Management/Views/Welcome/Index.cshtml
@@ -49,7 +49,7 @@
                             <input type="text" class="form-control" placeholder="验证码" name="VerifyCode" required>
                         </div>
                         <div class="col-xs-4">
-                            <img id="img-verify-code" style="width:86.7px; height:34px; border:1px #eee solid; cursor:pointer;" />
+                            <img id="img-verify-code" style="width:86.7px; height:34px; outline:1px #aaa solid; cursor:pointer;" />
                         </div>
                     </div>
                 </div>
