management login & cache upgrade

--- a/code/JIF.CMS/JIF.CMS.Management/Views/Shared/_CurrentUserInfo.cshtml
+++ b/code/JIF.CMS/JIF.CMS.Management/Views/Shared/_CurrentUserInfo.cshtml
@@ -1,8 +1,7 @@
-﻿@model JIF.CMS.Core.Domain.IUser
+﻿@model JIF.CMS.Core.AuthenticatedUser
 @{
     Layout = null;
 }
-
 <div class="user-panel">
     <div class="pull-left image">
         <img src="~/Content/AdminLTE/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
