add Zen.RabbitMQ Project

--- a/code/JIF.CMS/JIF.CMS.Management/Views/Article/_Categories.cshtml
+++ b/code/JIF.CMS/JIF.CMS.Management/Views/Article/_Categories.cshtml
@@ -13,7 +13,7 @@
                 </div>
                 @if (!cate.Childs.IsNullOrEmpty())
                 {
-                    @Html.Partial("_Categories", cate.Childs)
+                    // @Html.Partial("_Categories", cate.Childs)
                 }
             </li>
         }
