--- a/code/JIF.CMS/JIF.CMS.Management/Views/Article/Detail.cshtml
+++ b/code/JIF.CMS/JIF.CMS.Management/Views/Article/Detail.cshtml
@@ -28,7 +28,7 @@
                     <input type="text" class="form-control datepicker" id="inp-pub-date" placeholder="发布日期" value="@article.PublishTime.ToString(JIFConstants.DATETIME_NORMAL)">
                 </div>
                 <div class="form-group">
-                    <label>所属分类</label>&nbsp;<i id="op-categories" class="fa fa-cog" style="cursor:pointer;" data-toggle="tooltip" data-original-title="管理分类"></i></small>
+                    <label>所属分类</label>&nbsp;<i id="op-categories" class="fa fa-cog" style="cursor:pointer;" data-toggle="tooltip" data-original-title="管理分类"></i>
                     <select class="form-control" id="inp-category">
                         <option value="0">- 无 -</option>
                         @foreach (var cate in Model.Categories)
